add get router for check role
버튼 눌렀을 때 권환 확인은 따로 추가를 해줘야하므로 추가시킴
